# vulun-demo

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  wsgi.py
templates/: base.html  home.html  sensitive_backup.html  sensitive_directory.html  sensitive_index.html  sensitive_source.html  xss_dom.html  xss_index.html  xss_reflected.html  xss_stored.html
tests/: test_app.py
vulns/: __init__.py  config.py
vulns/sensitive/: __init__.py  files.py  routes.py
vulns/xss/: __init__.py  routes.py  store.py
